<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    style="@style/list_view_row_container"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:orientation="horizontal">

    <RelativeLayout
        android:layout_width="wrap_content"
        android:layout_height="60dp"
        android:background="@drawable/grid_card_default">

        <ImageButton
            android:id="@+id/receipt_line_count_increment"
            android:layout_width="70dp"
            android:layout_height="fill_parent"
            android:layout_alignParentEnd="true"
            android:layout_alignParentRight="true"
            android:layout_centerVertical="true"
            android:background="@drawable/button_transparent"
            android:contentDescription="@string/receipt_editable_count_decrement"
            android:padding="10dp"
            android:src="@drawable/ic_action_new"
            android:scaleType="centerInside"
            android:alpha="0.6"/>

        <LinearLayout
            android:id="@+id/receipt_sku_count_container"
            android:layout_width="40dp"
            android:layout_height="fill_parent"
            android:layout_toLeftOf="@+id/receipt_line_count_increment"
            android:layout_toStartOf="@+id/receipt_line_count_increment"
            android:gravity="center_vertical|center_horizontal">

            <TextView
                android:id="@+id/receipt_sku_count"
                style="@style/text_base"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:focusable="false"
                android:text="@string/dummy_data_product_count" />
        </LinearLayout>

        <ImageButton
            android:id="@+id/receipt_line_count_decrement"
            android:layout_width="70dp"
            android:layout_height="fill_parent"
            android:layout_centerVertical="true"
            android:layout_toLeftOf="@+id/receipt_sku_count_container"
            android:layout_toStartOf="@+id/receipt_sku_count_container"
            android:background="@drawable/button_transparent"
            android:contentDescription="@string/receipt_editable_count_increment"
            android:padding="10dp"
            android:src="@drawable/ic_action_decrement"
            android:scaleType="centerInside"
            android:alpha="0.6" />

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="fill_parent"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"
            android:layout_marginLeft="10dp"
            android:layout_marginStart="10dp"
            android:layout_toLeftOf="@+id/receipt_line_count_decrement"
            android:layout_toStartOf="@+id/receipt_line_count_decrement"
            android:orientation="vertical">

            <TextView
                android:id="@+id/receipt_title"
                style="@style/product_list_item_title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="2"
                android:text="@string/dummy_data_product_title" />

            <TextView
                android:id="@+id/receipt_sku_price"
                style="@style/text_base"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="center_vertical"
                android:text="@string/dummy_data_price_low"
                android:textColor="@color/font_primary" />

        </LinearLayout>

    </RelativeLayout>

</RelativeLayout>